--- a/DbView/build.gradle
+++ b/DbView/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion '19.0.3'
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 7
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName "1.0-SNAPSHOT"
     }
 
     compileOptions {
@@ -27,4 +27,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:appcompat-v7:+'
 }
