--- a/DbView/build.gradle
+++ b/DbView/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 7
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0-SNAPSHOT"
+        versionName '1.0.0'
     }
 
     compileOptions {
@@ -27,4 +27,54 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+}
+
+apply plugin: 'maven'
+apply plugin: 'signing'
+
+version = '1.0.0'
+group = 'im.dino'
+
+configurations {
+    archives {
+        extendsFrom configurations.default
+    }
+}
+
+signing {
+    required { has("release") && gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
+uploadArchives {
+    configuration = configurations.archives
+    repositories.mavenDeployer {
+        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+        repository(url: sonatypeRepo) {
+            authentication(userName: sonatypeUsername,
+                    password: sonatypePassword)
+        }
+
+        pom.project {
+            name 'Android DbView'
+            packaging 'aar'
+            description 'Android library for viewing in app databases.'
+            url 'https://github.com/reisub/dbview/'
+
+            scm {
+                url 'scm:git@github.com:reisub/dbview.git'
+                connection 'scm:git@github.com:reisub/dbview.git'
+                developerConnection 'scm:git@github.com:reisub/dbview.git'
+            }
+
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
 }
