Addded developer info to maven upload config, show db button in example app

--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -27,5 +27,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:19.0.1'
+    //    compile 'im.dino:DbView:1.0.0'
     compile project(':DbView')
 }
