--- a/DbView/build.gradle
+++ b/DbView/build.gradle
@@ -75,6 +75,13 @@ uploadArchives {
                     distribution 'repo'
                 }
             }
+
+            developers {
+                developer {
+                    id 'reisub'
+                    name 'Dino Kovač'
+                }
+            }
         }
     }
 }
