Added theme to example app activity declaration

--- a/ExampleApp/src/debug/AndroidManifest.xml
+++ b/ExampleApp/src/debug/AndroidManifest.xml
@@ -6,6 +6,7 @@
         <activity
             android:name="im.dino.dbinspector.activities.DbInspectorActivity"
             android:label="Example DbInspector"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:icon="@drawable/ic_launcher_dbinspector">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
