Gradle 1.12, gradle plugin 0.10, resource prefix check that came with new AS enabled

--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -16,6 +16,8 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    resourcePrefix 'dbinspector_'
+
     buildTypes {
 
         release {
