--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/dbinspector_app_name"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="im.dino.dbview.exampleapp.MainActivity"
-            android:label="@string/dbinspector_app_name">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
