--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion '19.1.0'
 
     defaultConfig {
+        applicationId 'im.dino.dbinspector.example'
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
@@ -18,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
