--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -27,6 +27,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:21.0.3'
 //    debugCompile 'im.dino:dbinspector:2.0.0@aar'
     debugCompile project(':dbinspector')
 }
