Added Menus and Support Fragment //TODO Check and Cleanup Code before pull request

--- a/dbinspector/src/main/AndroidManifest.xml
+++ b/dbinspector/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="im.dino.dbview">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="im.dino.dbview">
 
-    <application />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <application>
+        <service
+                android:name=".CopyDbIntentService"
+                android:exported="false">
+        </service>
+    </application>
 
 </manifest>
