--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="im.dino.dbview.exampleapp">
+          package="im.dino.dbview.exampleapp">
 
     <application
-        android:name="com.activeandroid.app.Application"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+            android:name="com.activeandroid.app.Application"
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
         <activity
-            android:name="im.dino.dbview.exampleapp.MainActivity"
-            android:label="@string/app_name">
+                android:name=".MainActivity"
+                android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <meta-data
-            android:name="AA_DB_NAME"
-            android:value="Example.db" />
+                android:name="AA_DB_NAME"
+                android:value="Example.db"/>
         <meta-data
-            android:name="AA_DB_VERSION"
-            android:value="1" />
+                android:name="AA_DB_VERSION"
+                android:value="1"/>
 
+        <service
+                android:name=".MyIntentService"
+                android:exported="false">
+        </service>
     </application>
 
 </manifest>
