--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Temporary workaround to enable building on travis
+# TODO fix the proper way
+# http://stackoverflow.com/a/17315335/2643666
+signing.keyId=
+signing.password=
+signing.secretKeyRingFile=
+
+sonatypeUsername=
+sonatypePassword=
