Added missing dummy property

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,9 +20,10 @@
 # Temporary workaround to enable building on travis
 # TODO fix the proper way
 # http://stackoverflow.com/a/17315335/2643666
-signing.keyId=
-signing.password=
-signing.secretKeyRingFile=
+signing.keyId=*secret*
+signing.password=*secret*
+signing.secretKeyRingFile=*secret*
 
-sonatypeUsername=
-sonatypePassword=
+sonatypeRepo=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+sonatypeUsername=*secret*
+sonatypePassword=*secret*
