--- a/dbinspector/src/main/AndroidManifest.xml
+++ b/dbinspector/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <application>
         <service
                 android:name=".CopyDbIntentService"
-                android:exported="false">
-        </service>
+                android:exported="false" />
     </application>
 
 </manifest>
