--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
 //    debugCompile 'im.dino:dbinspector:2.0.0@aar'
-    debugCompile project(':dbinspector')
+    debugCompile project(':library')
 }
