--- a/dbinspector/src/main/AndroidManifest.xml
+++ b/dbinspector/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application>
         <activity
                 android:name="im.dino.dbinspector.activities.DbInspectorActivity"
-                android:label="Example DbInspector"
+                android:label="@string/dbinspector_app_name"
                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                 android:icon="@drawable/dbinspector_ic_launcher">
             <intent-filter>
