Update build tools, platform tools, google repositories on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ jdk:
 
 android:
   components:
+    - platform-tools
+    - tools
     - build-tools-22.0.1
     - android-22
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
 
 script:
   - ./gradlew clean check -Dpre-dex=false
