--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="im.dino.dbview.exampleapp">
 
     <application
-            android:name="com.activeandroid.app.Application"
+            android:name=".ExampleApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
