--- a/dbinspector/src/main/AndroidManifest.xml
+++ b/dbinspector/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <service
                 android:name="im.dino.dbinspector.services.CopyDbIntentService"
                 android:exported="false" />
+        <service
+                android:name="im.dino.dbinspector.services.ImportDbIntentService"
+                android:exported="false" />
     </application>
 
 </manifest>
