--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
 
-# use container based buils infrastructure
+# use container based build infrastructure
 sudo: false
 
 jdk:
@@ -11,8 +11,8 @@ android:
   components:
     - platform-tools
     - tools
-    - build-tools-22.0.1
-    - android-22
+    - build-tools-23.0.2
+    - android-23
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
