Make the example app not report lint errors

--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -17,6 +17,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
