--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion rootProject.ext.compile_sdk
+    buildToolsVersion rootProject.ext.build_tools
+
 
     defaultConfig {
         applicationId 'im.dino.dbinspector.example'
         minSdkVersion 10
-        targetSdkVersion 25
+        targetSdkVersion rootProject.ext.target_sdk
         versionCode 1
         versionName "1.0"
     }
@@ -31,7 +32,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile "com.android.support:appcompat-v7:$support_lib"
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
