--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -5,12 +5,12 @@ version = '3.4.1'
 group = 'im.dino'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion rootProject.ext.compile_sdk
+    buildToolsVersion rootProject.ext.build_tools
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 25
+        targetSdkVersion rootProject.ext.target_sdk
         versionCode 1
         versionName version
 
@@ -39,7 +39,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile "com.android.support:appcompat-v7:$support_lib"
     compile 'commons-io:commons-io:2.4'
 }
 
