--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compile_sdk
-    buildToolsVersion rootProject.ext.build_tools
 
 
     defaultConfig {
@@ -31,11 +30,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:$support_lib"
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-//    debugCompile 'im.dino:dbinspector:3.2.1@aar'
-    debugCompile project(':dbinspector')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:$support_lib"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+//    debugImplementation 'im.dino:dbinspector:3.2.1@aar'
+    debugImplementation project(':dbinspector')
 }
