--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,17 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 //        maven { url 'https://oss.sonatype.org/content/repositories/imdino-1016/' }
