to make build work (findbugs in check requires sources be compiled)

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ android:
     - extra-android-m2repository
 
 script:
-  - ./gradlew clean check -PdisablePreDex
+  - ./gradlew clean buildDebug check -PdisablePreDex
 
 cache:
   directories:
