--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -1,12 +1,14 @@
-apply plugin: 'com.android.application'
+apply plugin: "kotlin-kapt"
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android-extensions"
+apply plugin: "kotlin-android"
 
 android {
     compileSdkVersion rootProject.ext.compile_sdk
 
-
     defaultConfig {
-        applicationId 'im.dino.dbinspector.example'
-        minSdkVersion 10
+        applicationId "im.dino.dbinspector.example"
+        minSdkVersion 19
         targetSdkVersion rootProject.ext.target_sdk
         versionCode 1
         versionName "1.0"
@@ -24,17 +26,23 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.txt"
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$support_lib"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-//    debugImplementation 'im.dino:dbinspector:3.2.1@aar'
-    debugImplementation project(':dbinspector')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "androidx.core:core-ktx:1.1.0"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:1.3.1"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
+    implementation "com.jakewharton.threetenabp:threetenabp:1.2.1"
+    implementation "androidx.room:room-runtime:2.2.1"
+    implementation "org.jetbrains.anko:anko-common:0.10.8"
+    kapt "androidx.room:room-compiler:2.2.1"
+
+//    debugImplementation "im.dino:dbinspector:3.2.1@aar"
+    debugImplementation project(":dbinspector")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
