--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -32,8 +34,7 @@ subprojects {
 }
 
 ext {
-    compile_sdk = 25
-    target_sdk = 25
-    build_tools = '25.0.2'
-    support_lib = '25.3.0'
+    compile_sdk = 29
+    target_sdk = 29
+    build_tools = '29.0.2'
 }
