--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+android.useAndroidX=true
+android.enableJetifier=true
+
 # Temporary workaround to enable building on travis
 # TODO fix the proper way
 # http://stackoverflow.com/a/17315335/2643666
