--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ android:
   components:
     - platform-tools
     - tools
+    - build-tools-28.0.3
     - build-tools-29.0.2
     - android-29
     - extra-google-google_play_services
