--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-//        maven { url 'https://oss.sonatype.org/content/repositories/imdino-1016/' }
+        // uncomment to test with staging version
+//        maven { url 'https://oss.sonatype.org/content/repositories/imdino-1027/' }
     }
 }
 
