--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
     implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
     implementation "androidx.startup:startup-runtime:1.0.0-beta01"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
 
 apply plugin: "maven"
