--- a/ExampleApp/build.gradle
+++ b/ExampleApp/build.gradle
@@ -1,17 +1,26 @@
 apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
-apply plugin: "kotlin-kapt"
 apply plugin: "kotlin-android-extensions"
 
 android {
-    compileSdkVersion rootProject.ext.compile_sdk
+    compileSdkVersion buildConfig.compileSdk
+    buildToolsVersion buildConfig.buildTools
 
     defaultConfig {
+        minSdkVersion buildConfig.minSdk
+        targetSdkVersion buildConfig.targetSdk
+        versionCode dbinspector.versionCode
+        versionName dbinspector.version
         applicationId "im.dino.dbinspector.example"
-        minSdkVersion 21
-        targetSdkVersion rootProject.ext.target_sdk
-        versionCode 2
-        versionName "5.0.0"
+    }
+
+    signingConfigs {
+        dummy {
+            storeFile file("dummy.jks")
+            storePassword "dummydummy"
+            keyAlias "dummy"
+            keyPassword "dummydummy"
+        }
     }
 
     compileOptions {
@@ -19,21 +28,35 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    lintOptions {
-        abortOnError false
-    }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.txt"
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.dummy
         }
+    }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    sourceSets {
+        main.java.srcDirs += "src/main/kotlin"
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.2.0"
-    implementation "com.google.android.material:material:1.2.1"
-    implementation project(":dbinspector")
+    implementation packages.kotlin.core
+    implementation packages.androidx.appcompat
+    implementation packages.google.design
+    debugImplementation project(":dbinspector")
+    releaseImplementation project(":dbinspector-no-op")
 }
