--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="im.dino.dbview.exampleapp">
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
+
         <activity
             android:name="im.dino.dbview.exampleapp.MainActivity"
             android:label="@string/app_name">
@@ -15,17 +18,6 @@
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="AA_DB_NAME"
-            android:value="Example-db-name" />
-        <meta-data
-            android:name="AA_DB_VERSION"
-            android:value="1" />
-
-        <!-- This is needed because otherwise AA does not recognize models if Instant run is turned on. Don't ask me why. -->
-        <meta-data
-            android:name="AA_MODELS"
-            android:value="im.dino.dbview.exampleapp.models.Article, im.dino.dbview.exampleapp.models.User" />
     </application>
 
 </manifest>
