--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,9 +8,9 @@ ext.versions = [
     "dbinspector"       : "5.0.0",
     "gradle"            : '4.1.0',
     "kotlin"            : "1.4.10",
-    "coroutines"        : "1.3.8",
+    "coroutines"        : "1.3.9",
     "bintray"           : "1.8.5",
-    "core"              : "1.3.1",
+    "core"              : "1.3.2",
     "appcompat"         : "1.2.0",
     "fragment"          : "1.2.5",
     "lifecycle"         : "2.2.0",
@@ -20,9 +20,9 @@ ext.versions = [
     "startup"           : "1.0.0-beta01",
     "swiperefreshlayout": "1.1.0",
     "design"            : "1.2.1",
-    "maven"             : "2.0",
-    "detekt"            : "1.13.1",
-    "dokka"             : "0.10.1",
+    "maven"             : "2.1",
+    "detekt"            : "1.14.1",
+    "dokka"             : "0.10.1", // TODO: Upgrade to latest Dokka
 ]
 
 ext.packages = [
@@ -48,7 +48,7 @@ ext.packages = [
         ],
         "viewpager"         : "androidx.viewpager:viewpager:${versions.viewpager}",
         "recyclerview"      : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
-        "paging"            : "androidx.paging:paging-runtime:${versions.paging}",
+        "paging"            : "androidx.paging:paging-runtime-ktx:${versions.paging}",
         "swiperefreshlayout": "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swiperefreshlayout}",
         "startup"           : "androidx.startup:startup-runtime:${versions.startup}"
     ],
