--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,7 +12,7 @@ ext.versions = [
     "bintray"           : "1.8.5",
     "core"              : "1.3.2",
     "appcompat"         : "1.2.0",
-    "fragment"          : "1.2.5",
+    "fragment"          : "1.3.0-beta01",
     "lifecycle"         : "2.2.0",
     "viewpager"         : "1.0.0",
     "paging"            : "3.0.0-alpha07",
