--- a/dbinspector/build.gradle
+++ b/dbinspector/build.gradle
@@ -29,6 +29,10 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+        freeCompilerArgs += [
+            '-Xuse-experimental=kotlinx.coroutines.FlowPreview',
+            '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi'
+        ]
     }
 
     sourceSets.each {
