Prepare activity alias export

--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
             </intent-filter>
         </activity>
 
+<!--        <activity-->
+<!--            android:name="im.dino.dbinspector.DbInspectorActivity"-->
+<!--            android:label="@string/dbinspector_name">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
     </application>
 
 </manifest>
