--- a/ExampleApp/src/main/AndroidManifest.xml
+++ b/ExampleApp/src/main/AndroidManifest.xml
@@ -18,14 +18,16 @@
             </intent-filter>
         </activity>
 
-<!--        <activity-->
-<!--            android:name="im.dino.dbinspector.DbInspectorActivity"-->
-<!--            android:label="@string/dbinspector_name">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+        <activity
+            android:name="im.dino.dbinspector.DbInspectorActivity"
+            android:icon="@drawable/dbinspector_launcher"
+            android:roundIcon="@drawable/dbinspector_launcher_round"
+            android:label="@string/dbinspector_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
