--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="im.dino.dbview.exampleapp">
+    package="im.dino.dbinspector.sample">
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +9,7 @@
         tools:ignore="AllowBackup">
 
         <activity
-            android:name="im.dino.dbview.exampleapp.MainActivity"
+            android:name="im.dino.dbinspector.sample.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
